# ruva

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: README.md
src/: ruvaconfig.json  ruvaconfig.toml  ruvaconfig.yml
src/agents/: agentconfig.toml
src/agents/researchAgentclear/: config.toml
src/ruva/: __init__.py  __main__.py
src/ruva/bundler/: __init__.py  _master.py  master.py
src/ruva/bundler/handlers/: __init__.py  _container.py  _image.py  _resource_handler.py
src/ruva/bundler/images/: commands.ini
src/ruva/bundler/images/notebook/: Dockerfile
src/ruva/cli/: Cli.py  entrypoint.py
src/ruva/cli/groups/: AddGroup.py  ApiGroup.py  CreateGroup.py  InitiateGroup.py  InvokeGroup.py
src/ruva/pydanticModels/: _model_handlers.py  _workspace.py  workspaceModel.py
src/ruva/resources/: README.md
src/ruva/smarty/handlers/: MCPHandlers.py
src/ruva/smarty/mcp/: serverHandler.py
src/ruva/smarty/models/: ModelHandler.py
src/ruva/utils/: ApiHandler.py  WorkspaceManager.py
src/ruva/utils/APIUtils/: GetMethods.py  PostMethods.py
src/sampleDataset/: datasetconfig.json
src/testTrainer/: datasetconfig.json
tuts/model1/: model1.py
