[project]
name = "ruva"
version = "0.1.0"
description = "Smart AIOps and DataOps CLI"
readme = "README.md"
authors = [
    { name = "JayReddy", email = "jayachandra.s.reddy@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.0",
    "duckdb>=1.3.2",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "mcp[cli]>=1.12.4",
    "mlflow>=3.2.0",
    "neo4j-rust-ext>=5.28.2.0",
    "ollama>=0.5.3",
    "peft>=0.17.0",
    "qdrant-client>=1.12.1",
    "streamlit>=1.48.1",
    "tomlkit>=0.13.3",
    "trl>=0.21.0",
    "uvicorn>=0.35.0",
    "verl>=0.5.0",
]

[project.scripts]
ruva = "ruva.cli.Cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pyinstaller>=6.15.0",
    "ruff>=0.12.8",
]

[tool.ruff]
exclude = [
    ".git",
    ".venv",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "build",
    "dist",
]


[tool.black]
exclude = '\.git|\.ruff_cache|\.venv|\.vscode|__pypackages__|build|dist|.venv'

