[project]
name = "ruva"
version = "0.1.0"
description = "Executable Intelligence Utility"
readme = "README.md"
authors = [
    { name = "Jay Reddy", email = "jayachandra.s.reddy@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "chonkie>=1.5.2",
    "duckdb>=1.4.3",
    "fastapi>=0.128.0",
    "langchain>=1.2.6",
    "mcp>=1.25.0",
    "mlflow>=3.8.1",
    "neo4j>=6.1.0",
    "peft>=0.18.1",
    "qdrant-client>=1.16.2",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=4.57.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
ruva = "ruva.cli.entrypoint:main"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pyinstaller>=6.15.0",
    "ruff>=0.12.8",
]

[tool.ruff]
exclude = [
    ".git",
    ".venv",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "build",
    "dist",
]


[tool.black]
exclude = '\.git|\.ruff_cache|\.venv|\.vscode|__pypackages__|build|dist|.venv'
